[package]
name = "cdrs-async"
version = "0.1.0-alpha.0"
authors = ["Alex Pikalov <alex.pikalov.khar@gmail.com>"]
edition = "2018"
description = "Asynchronous driver for Apache Cassandra"
license = "MIT OR Apache-2.0"
repository = "https://github.com/AlexPikalov/cdrs-async"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.4.0" }
async-tls = "0.6"
futures = {version = "0.3.1", features = ["thread-pool"]}
lz4-compress = "=0.1.0"
snap = "0.2.3"
async-trait = "0.1.21"

cassandra-proto = "0.1.2"
log = "0.4"

[dev-dependencies]
speculate = "0.1"
